--- a/ietf/templates/codematch/matches/new.html
+++ b/ietf/templates/codematch/matches/new.html
@@ -100,7 +100,7 @@
 								<div class="form-group">
 									<label class="control-label col-xs-2">Coding title:</label>
 									<div class="col-xs-4">
-										{{ codeform.title }} }}
+										{{ codeform.title }}
 									</div>
 								</div>
 								<div class="form-group">
