--- a/ietf/templates/base_codematch.html
+++ b/ietf/templates/base_codematch.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> {% load ietf_filters %}
 {# Copyright The IETF Trust 2015, All Rights Reserved #}
 {% load origin %}{% origin %}
+{% load staticfiles %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -8,9 +9,9 @@
     <title>{% block title %}No title{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="/fonts/PTMono/stylesheet.css" rel='stylesheet' type='text/css'>
-    <link href="/fonts/PTSans/stylesheet.css" rel='stylesheet' type='text/css'>
-    <link href="/fonts/PTSerif/stylesheet.css" rel='stylesheet' type='text/css'>
+    <link href="{% static "fonts/PTMono/stylesheet.css"%}" rel='stylesheet' type='text/css'>
+    <link href="{% static "fonts/PTSans/stylesheet.css"%}" rel='stylesheet' type='text/css'>
+    <link href="{% static "fonts/PTSerif/stylesheet.css"%}" rel='stylesheet' type='text/css'>
     {% comment %}
     <!-- Halloween
     <link href='https://fonts.googleapis.com/css?family=IM+Fell+English+SC|IM+Fell+DW+Pica:400,400italic|Nova+Mono|IM+Fell+English:400,400italic&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
@@ -19,35 +20,35 @@
 
     <!-- Analyse whether these stylesheets are used in base file, if not, add it through 'morecss' in the specific page -->
   <!-- Stylesheets -->
-  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="{% static "css/bootstrap.css"%}" rel="stylesheet">
   <!-- Font awesome icon -->
-  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static "css/font-awesome.min.css"%}">
   <!-- Ionicons icon -->
-  <link rel="stylesheet" href="/css/ionicons.min.css"> 
+  <link rel="stylesheet" href="{% static "css/ionicons.min.css"%}"> 
   <!-- jQuery UI -->
-  <link rel="stylesheet" href="/css/jquery-ui.css"> 
+  <link rel="stylesheet" href="{% static "css/jquery-ui.css"%}"> 
   <!-- Calendar -->
-  <link rel="stylesheet" href="/css/fullcalendar.css">
+  <link rel="stylesheet" href="{% static "css/fullcalendar.css"%}">
   <!-- prettyPhoto -->
-  <link rel="stylesheet" href="/css/prettyPhoto.css">  
+  <link rel="stylesheet" href="{% static "css/prettyPhoto.css"%}">  
   <!-- Star rating -->
-  <link rel="stylesheet" href="/css/rateit.css">
+  <link rel="stylesheet" href="{% static "css/rateit.css"%}">
   <!-- Date picker -->
-  <link rel="stylesheet" href="/css/bootstrap-datetimepicker.min.css">
+  <link rel="stylesheet" href="{% static "css/bootstrap-datetimepicker.min.css"%}">
   <!-- CLEditor -->
-  <link rel="stylesheet" href="/css/jquery.cleditor.css"> 
+  <link rel="stylesheet" href="{% static "css/jquery.cleditor.css"%}"> 
   <!-- Data tables -->
-  <link rel="stylesheet" href="/css/jquery.dataTables.css"> 
+  <link rel="stylesheet" href="{% static "css/jquery.dataTables.css"%}"> 
   <!-- Bootstrap toggle -->
-  <link rel="stylesheet" href="/css/jquery.onoff.css">
+  <link rel="stylesheet" href="{% static "css/jquery.onoff.css"%}">
   <!-- Main stylesheet -->
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="{% static "css/style.css"%}" rel="stylesheet">
   <!-- Widgets stylesheet -->
-  <link href="/css/widgets.css" rel="stylesheet">  
+  <link href="{% static "css/widgets.css"%}" rel="stylesheet">  
     <style>
      {% block morecss %}{% endblock %}
     </style>
-	<script src="/js/respond.min.js"></script>
+	<script src="{% static "js/respond.min.js"%}"></script>
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -55,11 +56,11 @@
     {% block pagehead %}{% endblock %}
 
     {% if server_mode and server_mode == "production" %}
-    <link rel="shortcut icon" href="/images/ietf-icon-blue3.png">
+    <link rel="shortcut icon" href="{% static "images/ietf-icon-blue3.png"%}">
     {% else %}
-    <link rel="shortcut icon" href="/images/ietf-icon-red3.png">
+    <link rel="shortcut icon" href="{% static "images/ietf-icon-red3.png"%}">
     {% endif %}
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="{% static "images/apple-touch-icon.png"%}">
   </head>
 
   <body {% block bodyAttrs %}{%endblock%} data-group-menu-data-url="{% url "group_menu_data" %}">
@@ -68,7 +69,6 @@
     {% include "base/menu_codematch.html" %}
     
 	{% block content %}{% endblock %}
-      
 
 	  <div class="col-md-12">
 	    <div class="text-center padded">
@@ -115,37 +115,37 @@
 	<!-- Certainly these js are not necessary to all pages, then, just like css, it must be filtered -->
 	
 	<!-- JS -->
-	<script src="js/jquery.js"></script> <!-- jQuery -->
-	<script src="js/bootstrap.min.js"></script> <!-- Bootstrap -->
-	<script src="js/jquery-ui.min.js"></script> <!-- jQuery UI -->
-	<script src="js/fullcalendar.min.js"></script> <!-- Full Google Calendar - Calendar -->
-	<script src="js/jquery.rateit.min.js"></script> <!-- RateIt - Star rating -->
-	<script src="js/jquery.prettyPhoto.js"></script> <!-- prettyPhoto -->
-	<script src="js/jquery.slimscroll.min.js"></script> <!-- jQuery Slim Scroll -->
-	<script src="js/jquery.dataTables.min.js"></script> <!-- Data tables -->
+	<script src="{% static "js/jquery.js"%}"></script> <!-- jQuery -->
+	<script src="{% static "js/bootstrap.min.js"%}"></script> <!-- Bootstrap -->
+	<script src="{% static "js/jquery-ui.min.js"%}"></script> <!-- jQuery UI -->
+	<script src="{% static "js/fullcalendar.min.js"%}"></script> <!-- Full Google Calendar - Calendar -->
+	<script src="{% static "js/jquery.rateit.min.js"%}"></script> <!-- RateIt - Star rating -->
+	<script src="{% static "js/jquery.prettyPhoto.js"%}"></script> <!-- prettyPhoto -->
+	<script src="{% static "js/jquery.slimscroll.min.js"%}"></script> <!-- jQuery Slim Scroll -->
+	<script src="{% static "js/jquery.dataTables.min.js"%}"></script> <!-- Data tables -->
 	
 	<!-- jQuery Flot -->
-	<script src="js/excanvas.min.js"></script>
-	<script src="js/jquery.flot.js"></script>
-	<script src="js/jquery.flot.resize.js"></script>
-	<script src="js/jquery.flot.pie.js"></script>
-	<script src="js/jquery.flot.stack.js"></script>
+	<script src="{% static "js/excanvas.min.js"%}"></script>
+	<script src="{% static "js/jquery.flot.js"%}"></script>
+	<script src="{% static "js/jquery.flot.resize.js"%}"></script>
+	<script src="{% static "js/jquery.flot.pie.js"%}"></script>
+	<script src="{% static "js/jquery.flot.stack.js"%}"></script>
 	
 	<!-- jQuery Notification - Noty -->
-	<script src="js/jquery.noty.js"></script> <!-- jQuery Notify -->
-	<script src="js/themes/default.js"></script> <!-- jQuery Notify -->
-	<script src="js/layouts/bottom.js"></script> <!-- jQuery Notify -->
-	<script src="js/layouts/topRight.js"></script> <!-- jQuery Notify -->
-	<script src="js/layouts/top.js"></script> <!-- jQuery Notify -->
+	<script src="{% static "js/jquery.noty.js"%}"></script> <!-- jQuery Notify -->
+	<script src="{% static "js/themes/default.js"%}"></script> <!-- jQuery Notify -->
+	<script src="{% static "js/layouts/bottom.js"%}"></script> <!-- jQuery Notify -->
+	<script src="{% static "js/layouts/topRight.js"%}"></script> <!-- jQuery Notify -->
+	<script src="{% static "js/layouts/top.js"%}"></script> <!-- jQuery Notify -->
 	<!-- jQuery Notification ends -->
 	
-	<script src="js/sparklines.js"></script> <!-- Sparklines -->
-	<script src="js/jquery.cleditor.min.js"></script> <!-- CLEditor -->
-	<script src="js/bootstrap-datetimepicker.min.js"></script> <!-- Date picker -->
-	<script src="js/jquery.onoff.min.js"></script> <!-- Bootstrap Toggle -->
-	<script src="js/filter.js"></script> <!-- Filter for support page -->
-	<script src="js/custom.js"></script> <!-- Custom codes -->
-	<script src="js/charts.js"></script> <!-- Charts & Graphs -->
+	<script src="{% static "js/sparklines.js"%}"></script> <!-- Sparklines -->
+	<script src="{% static "js/jquery.cleditor.min.js"%}"></script> <!-- CLEditor -->
+	<script src="{% static "js/bootstrap-datetimepicker.min.js"%}"></script> <!-- Date picker -->
+	<script src="{% static "js/jquery.onoff.min.js"%}"></script> <!-- Bootstrap Toggle -->
+	<script src="{% static "js/filter.js"%}"></script> <!-- Filter for support page -->
+	<script src="{% static "js/custom.js"%}"></script> <!-- Custom codes -->
+	<script src="{% static "js/charts.js"%}"></script> <!-- Charts & Graphs -->
 <!-- end of codematch js prototype -->
       
       
@@ -157,9 +157,9 @@
 	{% endcomment %}
 	<script>$(".visible-nojs").removeClass("visible-nojs");</script>
 	<script>$(".hidden-nojs").removeClass("hidden-nojs");</script>
-	<script src="/js/lib/jquery.cookie.min.js"></script>
-	<script src="/js/lib/bootstrap.min.js"></script>
-	<script src="/js/ietf.js"></script>
+	<script src="{% static "js/lib/jquery.cookie.min.js"%}"></script>
+	<script src="{% static "js/lib/bootstrap.min.js"%}"></script>
+	<script src="{% static "js/ietf.js"%}"></script>
 	{% block js %}{% endblock %}
 	
 	</body>
