--- a/ietf/templates/codematch/accounts/login.html
+++ b/ietf/templates/codematch/accounts/login.html
@@ -54,7 +54,7 @@
                 </div>
               
                 <div class="widget-foot">
-                  Not Registred? <a href="#">Register here</a>
+                  Not Registred? <a href="{% url 'ietf.codematch.accounts.views.register' %}">Register here</a>
                 </div>
             </div>  
       </div>
