--- a/ietf/templates/codematch/requests/list.html
+++ b/ietf/templates/codematch/requests/list.html
@@ -62,15 +62,15 @@
 	          <div class="padd">
 	               <div class="user">
 	                   <div class="user-details" style="margin-left: 0px; margin-bottom:20px;">
-	                   <h4><i class="fa fa-chevron-circle-right"> <a href="{% url 'show' projectcontainer.id %}">{{ projectcontainer.title }}</a> </i> {{ projectcontainer.code_request.creation_date|date:"d M Y" }}
+	                   <h5><i class="fa fa-chevron-circle-right"> <a href="{% url 'show' projectcontainer.id %}">{{ projectcontainer.title }}</a> </i> {{ projectcontainer.code_request.creation_date|date:"d M Y" }}
 	                      	{% if user.is_authenticated %}
 	                   			{% if projectcontainer.owner == owner %}
-		                   			<a class="label label-info" href="{% url 'ietf.codematch.requests.views.update' projectcontainer.id %}" style="margin-left: 30px"><i class="fa fa-pencil"></i> Edit</a> 
+		                   			<a class="label label-info" href="{% url 'ietf.codematch.requests.views.edit' projectcontainer.id %}" style="margin-left: 30px"><i class="fa fa-pencil"></i> Edit</a> 
 				               		<a class="label label-warning" href="#" ><i class="fa fa-folder"></i> Archive</a>
 			               		{% endif %}
 		               			<a href="{% url 'ietf.codematch.matches.views.new' projectcontainer.id %}" class="label label-info" ><i class="fa fa-check"></i>Associate my project</a>
 							{% endif %}
-			            </h4>
+			            </h5>
 	                   	<div style="margin-left:15px">
 	                        <p>{{ projectcontainer.description|linebreaks }}</p>
 			            </div>
