--- a/ietf/templates/codematch/requests/new.html
+++ b/ietf/templates/codematch/requests/new.html
@@ -83,7 +83,7 @@
 								<div class="form-group">
 									<label class="control-label col-xs-2">Estimated level of effort:</label>
 									<div class="col-xs-4">
-										{{ reqform.estimated_lof }}
+										{{ reqform.estimated_lof }} <label> months</label> 
 									</div>
 								</div>
 								<div class="form-group">
@@ -96,10 +96,10 @@
 								<br />
 																
 								<div>
-									{% if user.is_authenticated and myrequest %}
+									{% if user.is_authenticated  %}
 									<form action="{% url 'ietf.codematch.requests.views.new' %}" method="post">
 										<div>
-										{% if user.is_authenticated and docs and myrequest %}
+										{% if user.is_authenticated and docs and canadddocuments %}
 				            				<h4><strong>Documents</strong></h4>
 											{% for doc in docs %}
 												{{ doc.document.group }}: <a  href="https://datatracker.ietf.org/doc/{{doc.name}}"> {{ doc.name }} </a>
@@ -117,7 +117,7 @@
 										<br />	
 										
 										<div>
-										{% if user.is_authenticated and tags and myrequest %}
+										{% if user.is_authenticated and tags and canaddtags %}
 			            				<h4><strong>Tags</strong></h4> 
 			            					{% for tag in tags %}
 					            				{% if not forloop.first %}
@@ -141,12 +141,12 @@
 								<br />
 	            				
 						   		<div class="widget-foot">
-                                <p class="buttonlist">
-                                	<div class="col-xs-offset-1" style="margin-left: 0px">
-							    		<input type="submit" name="save" class="btn btn-primary" value="Submit" />
-										<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Cancel</a>
-                                	</div>
-                                </p>
+	                                <p class="buttonlist">
+	                                	<div class="col-xs-offset-1" style="margin-left: 0px">
+								    		<input type="submit" name="save" class="btn btn-primary" value="Submit" />
+											<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Cancel</a>
+	                                	</div>
+	                                </p>
                             	</div>
                             </div>
 							</form>
