--- a/ietf/templates/base_codematch.html
+++ b/ietf/templates/base_codematch.html
@@ -92,8 +92,8 @@
 	        {% if version_num %}
 		  <a href="{% url "ietf.codematch.views.about" %}">About</a> |
 	          IETF CodeMatch |
-	          <a href="/release/{{version_num}}/">Version {{ version_num }}</a>
-	          | {{revision_date}} |
+	          <a href="#">Version {{ codematch_version }}</a>
+	          | {{codematch_revision_date}} |
 	        {% endif %}
 	        <a href="https://tools.ietf.org/tools/ietfdb/newticket">Report a bug</a>
 	        {% if messages %}
