--- a/ietf/templates/codematch/matches/show.html
+++ b/ietf/templates/codematch/matches/show.html
@@ -84,7 +84,7 @@
 							            				{% if not forloop.first %}
 							            				,
 							            				{% endif %}
-							            				<a href="#">{{ tag }}</a>
+							            				<a href="#">#{{ tag }}</a>
 							            			{% endfor %}
 												</div>
 
