--- a/ietf/templates/codematch/requests/show.html
+++ b/ietf/templates/codematch/requests/show.html
@@ -131,7 +131,7 @@
 	            				{% if not forloop.first %}
 	            				,
 	            				{% endif %}
-	            				<a href="#">{{ tag }}</a>
+	            				<a href="#">#{{ tag }}</a>
 	            			{% endfor %}
 		            		
 		            		<br />
