--- a/ietf/templates/codematch/requests/edit.html
+++ b/ietf/templates/codematch/requests/edit.html
@@ -126,7 +126,7 @@
 					            				{% if not forloop.first %}
 			            						,
 			            						{% endif %}
-			            						<a>{{ tag }}</a>
+			            						<a>#{{ tag }}</a>
 			            					{% endfor %}
 			            					<br />	
 			            				{% endif %}
