--- a/ietf/templates/codematch/requests/new.html
+++ b/ietf/templates/codematch/requests/new.html
@@ -123,7 +123,7 @@
 					            				{% if not forloop.first %}
 			            						,
 			            						{% endif %}
-			            						<a>{{ tag }}</a>
+			            						<a>#{{ tag }}</a>
 			            					{% endfor %}
 			            					<br />	
 			            				{% endif %}
